feat: add well being

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
       <ion-content>
         <ion-list id="inbox-list">
           <div class="main-menu-header">
-            <div class="main-menu_avatar"></div>
+            <div class="main-menu_avatar">
+              <img src="./../assets/icon/logo-ddt.png"/>
+            </div>
             <ion-note>{{ settings?.name }}</ion-note>
             <ion-list-header class="inbox-list-header" *ngIf="afterTransplantationText">
               <span> {{ afterTransplantationText }}</span>
