--- a/src/app/pages/diary/components/body-temperature/components/body-temperature-register/body-temperature-register.component.html
+++ b/src/app/pages/diary/components/body-temperature/components/body-temperature-register/body-temperature-register.component.html
@@ -28,7 +28,7 @@
     </ng-container>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data</td>
+      <td class="mat-cell" colspan="4">Журнал измерения температуры пуст</td>
     </tr>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
