--- a/src/app/pages/diary/components/weight/weight.component.html
+++ b/src/app/pages/diary/components/weight/weight.component.html
@@ -13,7 +13,7 @@
 
       <ion-tab-button tab="history">
         <ion-icon name="map"></ion-icon>
-        <ion-label>История</ion-label>
+        <ion-label>Журнал взвешивания</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="settings">
