--- a/src/app/pages/diary/components/well-being/well-being.component.html
+++ b/src/app/pages/diary/components/well-being/well-being.component.html
@@ -1,3 +1,20 @@
-<p>
-  well-being works!
-</p>
+<ion-app>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="research">
+        <ion-icon name="calendar"></ion-icon>
+        <ion-label>Обзор</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="statistic">
+        <ion-icon name="stats-chart-outline"></ion-icon>
+        <ion-label>Статистика</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="registry">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>Журнал самочувствия</ion-label>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-app>
