--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,6 @@
   &_avatar {
     width: 50px;
     height: 50px;
-    background: gray;
     border-radius: 50%;
     margin: 10px;
   }
@@ -137,6 +136,7 @@ ion-note {
 
 .main-menu_icon {
   margin: 0 10px;
+  color: var(--main-color)
 }
 .main-menu_sub-item {
   padding-left: 20px;
