--- a/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
+++ b/src/app/pages/diary/components/weight/components/weight-history/weight-history.component.html
@@ -28,7 +28,7 @@
     </ng-container>
 
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data</td>
+      <td class="mat-cell" colspan="4">Нету данных</td>
     </tr>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
