--- a/src/app/pages/pills/components/pills-research/pills-research.component.scss
+++ b/src/app/pages/pills/components/pills-research/pills-research.component.scss
@@ -23,10 +23,10 @@ table {
     align-content: center;
     font-size: 1em;
     margin-bottom: 20px;
-    color: #2C98F0;
+    color: var(--main-color)
 
     fa-icon {
-      color: #2C98F0;
+      color: var(--main-color);
     }
 
     &_button {
@@ -35,7 +35,7 @@ table {
       justify-content: space-between;
       margin: 10px 0;
       border-radius: 5px;
-      border: 2px solid #2C98F0;
+      border: 2px solid var(--main-color);
       padding: 10px;
     }
 
