--- a/src/app/pages/diary/components/urine/urine.component.html
+++ b/src/app/pages/diary/components/urine/urine.component.html
@@ -6,9 +6,14 @@
         <ion-label>Обзор</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="history">
+      <ion-tab-button tab="statistic">
         <ion-icon name="map"></ion-icon>
-        <ion-label>История</ion-label>
+        <ion-label>Статистика</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="registry">
+        <ion-icon name="map"></ion-icon>
+        <ion-label>Журнал диуреза</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
