--- a/src/app/pages/pills/pills.component.html
+++ b/src/app/pages/pills/pills.component.html
@@ -1,20 +1,6 @@
-<ion-app>
-    <ion-tabs class="pills-research-tabs">
-        <ion-tab-bar slot="bottom">
-            <ion-tab-button tab="research">
-                <ion-icon name="calendar"></ion-icon>
-                <ion-label>Прием лекарств</ion-label>
-            </ion-tab-button>
+<ion-content [fullscreen]="true">
+    <div id="container">
+        <ion-router-outlet class="pages"></ion-router-outlet>
+    </div>
+</ion-content>
 
-            <ion-tab-button tab="drugs">
-                <ion-icon name="bandage-outline"></ion-icon>
-                <ion-label>Все лекарства</ion-label>
-            </ion-tab-button>
-
-            <ion-tab-button tab="history">
-                <ion-icon name="map"></ion-icon>
-                <ion-label>История</ion-label>
-            </ion-tab-button>
-        </ion-tab-bar>
-    </ion-tabs>
-</ion-app>
