--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,7 +1,8 @@
 <ion-content [fullscreen]="true" class="app-settings">
-  <ion-header class="app-settings-header">
-    <h3> Настройки </h3>
-  </ion-header>
+  <div class="app-settings-header">
+    <div class="app-settings-header_title">Настройки</div>
+    <div class="app-settings-header_divider"></div>
+  </div>
   <form>
     <div class="app-settings-content">
       <div class="app-settings-content_form-field">
@@ -14,6 +15,12 @@
         <mat-form-field appearance="outline" class="app-settings-content_form-field">
           <mat-label>Рост</mat-label>
           <input matInput type="number" placeholder="Ваш рост в см" [formControl]="growthControl">
+        </mat-form-field>
+      </div>
+      <div class="app-settings-content_form-field">
+        <mat-form-field appearance="outline" class="app-settings-content_form-field">
+          <mat-label>Планируемый вес</mat-label>
+          <input matInput type="number" placeholder="Планируемый вес" [formControl]="plannedWeightControl">
         </mat-form-field>
       </div>
       <div class="app-settings-content_form-field">
