--- a/src/app/pages/diary/components/body-temperature/components/body-temperature-register/body-temperature-register.component.html
+++ b/src/app/pages/diary/components/body-temperature/components/body-temperature-register/body-temperature-register.component.html
@@ -10,13 +10,13 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="temperature">
       <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Температура </th>
-      <td mat-cell *matCellDef="let element"> {{element.temperature}} kg</td>
+      <td mat-cell *matCellDef="let element"> {{element.temperature}} &#176;</td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="diff">
       <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Разница </th>
-      <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'red' : 'green' "> {{ element.diff }} kg</td>
+      <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'red' : 'green' "> <span *ngIf="element.diff">{{ element.diff }} &#176;</span></td>
     </ng-container>
 
     <!-- Checkbox Column -->
