--- a/src/app/pages/diary/components/urine/components/urine-research/urine-research.component.html
+++ b/src/app/pages/diary/components/urine/components/urine-research/urine-research.component.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="urine-research-footer_new">
-        <button mat-fab color="primary">
+        <button mat-fab color="primary" (click)="openDialog()">
           <mat-icon>add</mat-icon>
         </button>
       </div>
