--- a/src/app/pages/diary/components/well-being/components/well-being-registry/well-being-registry.component.html
+++ b/src/app/pages/diary/components/well-being/components/well-being-registry/well-being-registry.component.html
@@ -13,10 +13,14 @@
             <td mat-cell *matCellDef="let element"> {{element.wellBeing}}</td>
         </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="diff">
-            <th mat-header-cell *matHeaderCellDef  mat-sort-header width="80px"> Разница </th>
-            <td mat-cell *matCellDef="let element" [style.color]="element.diff > 0 ? 'green' : 'red' "> <span  *ngIf="element.diff">{{ element.diff }} балла</span></td>
+        <ng-container matColumnDef="flow">
+            <th mat-header-cell *matHeaderCellDef  mat-sort-header width="150px"> Источник </th>
+            <td mat-cell *matCellDef="let element">
+                <span *ngIf="element.flow === 'Urine'">Диурез</span>
+                <span *ngIf="element.flow === 'Well Being'">Самочувствие</span>
+                <span *ngIf="element.flow === 'Blood Pressure'">Давление и пульс</span>
+                <span *ngIf="element.flow === 'Body Temperature'">Температура тела</span>
+            </td>
         </ng-container>
 
         <!-- Checkbox Column -->
