--- a/src/app/pages/pills/components/pills-research/pills-research.component.scss
+++ b/src/app/pages/pills/components/pills-research/pills-research.component.scss
@@ -13,6 +13,31 @@ table {
   height: 100%;
   padding: 10px;
   margin-bottom: 60px;
+  background: var(--theme-color-yellow-light-rgba);
+
+  &-no-items {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    &_footer {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    &_button {
+      border-radius: 28px;
+      border: 1px solid var(--theme-color-red-50-hex);
+      width: 200px;
+      height: 32px;
+      background: none;
+      color: rgba(113, 79, 79, 0.74);
+      font-size: 12px;
+    }
+  }
 
   &-header {
     display: flex;
