--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,3 +1,6 @@
+.app-settings::part(background) {
+  background: var(--theme-color-yellow-light-rgba);
+}
 .app-settings {
   &_link {
     font-size: 12px;
@@ -28,13 +31,20 @@
   }
 
   &-header {
-    padding: 10px 0;
+    margin: 20px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    font-size: 12px;
+    line-height: 14px;
+    color: var(--theme-color-red-light-hex);
+    justify-content: space-between;
 
-    h3 {
-      margin: 0;
+    &_title {
+      width: 100px;
+    }
+
+    &_divider {
+      width: 100%;
+      border-bottom: 1px solid rgba(113, 79, 79, 0.3);
     }
   }
 }
